--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>WeatherAPP</title>
-  <style>
-  html {
-    height: 100%;
-    background-image: url('https://images.unsplash.com/photo-1534088568595-a066f410bcda?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjk0NTY1fQ');
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* background-position: center; */
-}
-
-      </style>
+  <link rel="stylesheet" type="text/css" href="dist\style.bundle.css"/>
 </head>
 
 <body>
