--- a/index.html
+++ b/index.html
@@ -16,29 +16,36 @@
     <div class="main__body">
       <div class="body__wrapper">
         <div class="body__wrapper--header">
-          <div class="weather-info__city">London</div>
-          <div class="weather-info__date">November 10</div>
+          <div class="weather-info__city"></div>
+          <div class="weather-info__date"></div>
         </div>
         <div class="body__wrapper--body">
           <div class="weather-info__today-data">
             <div class="today-data">
+
+              <div class="today-data__left">
+                <div class="today-data__left--degree"></div>
+              </div>
+
+              <div class="today-data__right">
                 <div class="today-data__header">
-                    <div class="today-data--degree">1°C</div>
-                    <div class="today-data-details">
-                        <div class="today-data-details--rain"><i class="fas fa-cloud-rain"></i> Rain</div>
-                        <div class="today-data-details--wind"><i class="fas fa-wind"></i>Wind</div>
-                        <div class="today-data-details--humidity"><i class="fas fa-tint"></i>Humidity</div>
-                        <div class="today-data-details--uv-index"><i class="fas fa-sort-amount-down"></i>UX index</div>
-                    </div>
+                  <div class="today-data-details">
+                    <div class="today-data-details--rain"><i class="fas fa-info-circle"></i></div>
+                    <div class="today-data-details--wind"><i class="fas fa-wind"></i>Wind</div>
+                    <div class="today-data-details--humidity"><i class="fas fa-tint"></i>Humidity</div>
+                    <div class="today-data-details--uv-index"><i class="fas fa-sort-amount-down"></i>UX index</div>
+                  </div>
                 </div>
                 <div class="today-data__body">
-                    <div class="today-data-details">
-                        <div class="today-data-details--rain"></div>
-                        <div class="today-data-details--wind"></div>
-                        <div class="today-data-details--humidity"></div>
-                        <div class="today-data-details--uv-index"></div>
-                    </div>
+                  <div class="today-data-details">
+                    <div class="today-data-details--rain"></div>
+                    <div class="today-data-details--wind"></div>
+                    <div class="today-data-details--humidity"></div>
+                    <div class="today-data-details--uv-index"></div>
+                  </div>
                 </div>
+              </div>
+
 
             </div>
           </div>
@@ -47,9 +54,9 @@
             <div class="day-tile-group--list">
               <div class="day-tile">
                 <div class="day-tile--wrapper">
-                  <div class="day-tile__header"> November 11</div>
+                  <div class="day-tile__header"></div>
                   <div class="day-tile__body">
-                    <div class='day-tile__body--degree'>13°C</div>
+                    <div class='day-tile__body--degree'></div>
                     <div class='day-tile__body--icon'></div>
                   </div>
                   <div class="day-tile__footer"></div>
@@ -97,6 +104,8 @@
   </div>
   <script src="./dist/main.bundle.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 </body>
 
 </html>
