[update] settingsVC logic

--- a/src/templetes/settings.html
+++ b/src/templetes/settings.html
@@ -23,7 +23,7 @@
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <a class="dropdown-item" href="#">Celcius</a>
-                                        <a class="dropdown-item" href="#">Kelvinn</a>
+                                        <a class="dropdown-item" href="#">Kelvin</a>
                                         <a class="dropdown-item" href="#">Fahrenheit</a>
                                     </div>
                                 </div>
