[fix] temp style, promises load data

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <div class="today-data__right">
                 <div class="today-data__header">
                   <div class="today-data-details">
-                    <div class="today-data-details--rain"><i class="fas fa-info-circle"></i></div>
+                    <div class="today-data-details--rain"></div>
                     <div class="today-data-details--wind"><i class="fas fa-wind"></i>Wind</div>
                     <div class="today-data-details--humidity"><i class="fas fa-tint"></i>Humidity</div>
                     <div class="today-data-details--uv-index"><i class="fas fa-sort-amount-down"></i>UX index</div>
