--- a/src/templetes/settings.html
+++ b/src/templetes/settings.html
@@ -23,7 +23,6 @@
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <a class="dropdown-item" href="#">Celcius</a>
-                                        <a class="dropdown-item" href="#">Kelvin</a>
                                         <a class="dropdown-item" href="#">Fahrenheit</a>
                                     </div>
                                 </div>
@@ -62,7 +61,7 @@
                                     <span class="sr-only">Next</span>
                                 </a>
                             </div>
-                            <button data-function="set-background">Set background</button>
+                            <button class="btn btn-primary" data-function="set-background">Set background</button>
                         </div>
                     </div>
                     <div class="col-2"></div>
