[update] cookies save settings / google api initialize

--- a/src/templetes/settings.html
+++ b/src/templetes/settings.html
@@ -16,7 +16,7 @@
                             <div class="input-section__label"> Choose units</div>
                             <div class="input-section__input">
                                 <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button"
+                                    <button class="btn btn-primary dropdown-toggle" type="button"
                                         id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
                                         Units
