--- a/index.html
+++ b/index.html
@@ -25,82 +25,102 @@
 
               <div class="today-data__left">
                 <div class="today-data__left--degree"></div>
+                <div class="today-data__left--feels-like"></div>
+
               </div>
 
               <div class="today-data__right">
+                <div class="tbody__right--upper">
+                  <div class="today-data__header">
+                    <div class="today-data-details">
+                      <div class="today-data-details--rain"></div>
+                      <div class="today-data-details--wind"><i class="fas fa-wind"></i>Wind</div>
+                      <div class="today-data-details--humidity"><i class="fas fa-tint"></i>Humidity</div>
+                      <div class="today-data-details--uv-index"><i class="fas fa-sort-amount-down"></i>UX index</div>
+                    </div>
+                  </div>
+                  <div class="today-data__body">
+                    <div class="today-data-details">
+                      <div class="today-data-details--rain"></div>
+                      <div class="today-data-details--wind"></div>
+                      <div class="today-data-details--humidity"></div>
+                      <div class="today-data-details--uv-index"></div>
+                    </div>
+                  </div>
+                </div>
+              <div class="tbody__right--bottom">
                 <div class="today-data__header">
                   <div class="today-data-details">
-                    <div class="today-data-details--rain"></div>
-                    <div class="today-data-details--wind"><i class="fas fa-wind"></i>Wind</div>
-                    <div class="today-data-details--humidity"><i class="fas fa-tint"></i>Humidity</div>
-                    <div class="today-data-details--uv-index"><i class="fas fa-sort-amount-down"></i>UX index</div>
+                    <div class="today-data-details--pressure"><i class="fas fa-compress"></i> Pressure</div>
+                    <div class="today-data-details--wind-degree"><i class="fas fa-windsock"></i>Wind degree</div>
+                    <div class="today-data-details--sunrise"><i class="fas fa-sunrise"></i>Sunrise</div>
+                    <div class="today-data-details--sunset"><i class="fas fa-sunset"></i>Sunset</div>
                   </div>
                 </div>
                 <div class="today-data__body">
                   <div class="today-data-details">
-                    <div class="today-data-details--rain"></div>
-                    <div class="today-data-details--wind"></div>
-                    <div class="today-data-details--humidity"></div>
-                    <div class="today-data-details--uv-index"></div>
+                    <div class="today-data-details--pressure"></div>
+                    <div class="today-data-details--wind-degree"></div>
+                    <div class="today-data-details--sunrise"></div>
+                    <div class="today-data-details--sunset"></div>
                   </div>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-          <div class="weather-info__week-data">
-            <div class="day-tile-group--arrow day-tile-group--left"><i class="fas fa-angle-left"></i></div>
-            <div class="day-tile-group--list">
-              <div class="day-tile">
-                <div class="day-tile--wrapper">
-                  <div class="day-tile__header"></div>
-                  <div class="day-tile__body">
-                    <div class='day-tile__body--degree'></div>
-                    <div class='day-tile__body--icon'></div>
-                  </div>
-                  <div class="day-tile__footer"></div>
-                </div>
-              </div>
-              <div class="day-tile">
-                <div class="day-tile--wrapper">
-                  <div class="day-tile__header"></div>
-                  <div class="day-tile__body">
-                    <div class='day-tile__body--degree'></div>
-                    <div class='day-tile__body--icon'></div>
-                  </div>
-                  <div class="day-tile__footer"></div>
-                </div>
-              </div>
-              <div class="day-tile">
-                <div class="day-tile--wrapper">
-                  <div class="day-tile__header"></div>
-                  <div class="day-tile__body">
-                    <div class='day-tile__body--degree'></div>
-                    <div class='day-tile__body--icon'></div>
-                  </div>
-                  <div class="day-tile__footer"></div>
-                </div>
-              </div>
-              <div class="day-tile">
-                <div class="day-tile--wrapper">
-                  <div class="day-tile__header"></div>
-                  <div class="day-tile__body">
-                    <div class='day-tile__body--degree'></div>
-                    <div class='day-tile__body--icon'></div>
-                  </div>
-                  <div class="day-tile__footer"></div>
                 </div>
               </div>
             </div>
-            <div class="day-tile-group--arrow day-tile-group--right"><i class="fas fa-angle-right"></i></div>
           </div>
+        </div>
+        <div class="weather-info__week-data">
+          <div class="day-tile-group--arrow day-tile-group--left"><i class="fas fa-angle-left"></i></div>
+          <div class="day-tile-group--list">
+            <div class="day-tile">
+              <div class="day-tile--wrapper">
+                <div class="day-tile__header"></div>
+                <div class="day-tile__body">
+                  <div class='day-tile__body--degree'></div>
+                  <div class='day-tile__body--icon'></div>
+                </div>
+                <div class="day-tile__footer"></div>
+              </div>
+            </div>
+            <div class="day-tile">
+              <div class="day-tile--wrapper">
+                <div class="day-tile__header"></div>
+                <div class="day-tile__body">
+                  <div class='day-tile__body--degree'></div>
+                  <div class='day-tile__body--icon'></div>
+                </div>
+                <div class="day-tile__footer"></div>
+              </div>
+            </div>
+            <div class="day-tile">
+              <div class="day-tile--wrapper">
+                <div class="day-tile__header"></div>
+                <div class="day-tile__body">
+                  <div class='day-tile__body--degree'></div>
+                  <div class='day-tile__body--icon'></div>
+                </div>
+                <div class="day-tile__footer"></div>
+              </div>
+            </div>
+            <div class="day-tile">
+              <div class="day-tile--wrapper">
+                <div class="day-tile__header"></div>
+                <div class="day-tile__body">
+                  <div class='day-tile__body--degree'></div>
+                  <div class='day-tile__body--icon'></div>
+                </div>
+                <div class="day-tile__footer"></div>
+              </div>
+            </div>
+          </div>
+          <div class="day-tile-group--arrow day-tile-group--right"><i class="fas fa-angle-right"></i></div>
         </div>
       </div>
     </div>
-    <div class="main__footer">
-      <div class="button-settings"><i class="fas fa-cog" data-function="button-settings"></i></div>
-    </div>
+  </div>
+  <div class="main__footer">
+    <div class="button-settings"><i class="fas fa-cog" data-function="button-settings"></i></div>
+  </div>
   </div>
   <script src="./dist/main.bundle.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
