[upload] cookies, reinit after settings change

--- a/src/templetes/settings.html
+++ b/src/templetes/settings.html
@@ -48,6 +48,14 @@
                     <div class="row">
                         <div class="input-section">
                             <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="settings-wind-deg" unchecked>
+                                <label class="form-check-label" for="settings-wind-deg">Show wind degree</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-section">
+                            <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="settings-feels-temp" unchecked>
                                 <label class="form-check-label" for="settings-feels-temp">Show feels like temperature</label>
                             </div>
