[update]  low qual icons, init popover extend

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="today-data__header">
                   <div class="today-data-details">
                     <div class="today-data-details--pressure"><i class="fas fa-compress"></i> Pressure</div>
-                    <div class="today-data-details--wind-degree"><i class="fas fa-windsock"></i>Wind degree</div>
-                    <div class="today-data-details--sunrise"><i class="fas fa-sunrise"></i>Sunrise</div>
-                    <div class="today-data-details--sunset"><i class="fas fa-sunset"></i>Sunset</div>
+                    <div class="today-data-details--wind-degree"><img class="icon" src="./src//img/wind-deg-icon.png">Wind deg.</div>
+                    <div class="today-data-details--sunrise"><img class="icon" src="./src//img/sunrise-icon.png">Sunrise</div>
+                    <div class="today-data-details--sunset"><img class="icon" src="./src//img/sunset-icon.png">Sunset</div>
                   </div>
                 </div>
                 <div class="today-data__body">
