[update] add popover plugin

--- a/src/templetes/settings.html
+++ b/src/templetes/settings.html
@@ -32,14 +32,11 @@
                         <div class="input-section">
                             <div class="input-section__label"> City </div>
                             <div class="input-group mb-3 input-section__input">
-                                <input type="text" class="form-control" data-function="current-city" aria-describedby="basic-addon2">
+                                <input type="text" class="form-control" id="current-city" data-function="current-city" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                   <button class="btn btn-outline-primary" data-function="localize-me" type="button"><i class="fas fa-globe"></i></button>
                                 </div>
                               </div>
-                            <!-- <div class="input-section__input">
-                                <input type="text" data-function="current-city">
-                            </div> -->
                         </div>
                     </div>
 
