--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
   </div>
   <script src="./dist/main.bundle.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQGepPqdCNoOUJSZZf2j-oa3KtqJEaefA&libraries=places"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 </body>
