--- a/__index.html
+++ b/__index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>WeatherAPP</title>
-  <link rel="stylesheet" type="text/css" href="dist\style.bundle.css" />
+  <link rel="stylesheet" type="text/css" href="public/static/style.bundle.css" />
 </head>
 
 <body>
@@ -53,10 +53,10 @@
                     <div class="today-data-details">
                       <div class="today-data-details--pressure"><i class="fas fa-compress"></i> Pressure</div>
                       <div class="today-data-details--wind-degree"><img class="icon"
-                          src="./src//img/wind-deg-icon.png">Wind deg.</div>
+                          src="./public/img/wind-deg-icon.png">Wind deg.</div>
                       <div class="today-data-details--sunrise"><img class="icon"
-                          src="./src//img/sunrise-icon.png">Sunrise</div>
-                      <div class="today-data-details--sunset"><img class="icon" src="./src//img/sunset-icon.png">Sunset
+                          src="./public/img/sunrise-icon.png">Sunrise</div>
+                      <div class="today-data-details--sunset"><img class="icon" src="./public/img/sunset-icon.png">Sunset
                       </div>
                     </div>
                   </div>
@@ -125,7 +125,7 @@
       <div class="button-settings"><i class="fas fa-cog" data-function="button-settings"></i></div>
     </div>
   </div>
-  <script src="./dist/main.bundle.js"></script>
+  <script src="public/static/main.bundle.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
   <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQGepPqdCNoOUJSZZf2j-oa3KtqJEaefA&libraries=places"></script>
